<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="245dp"
        android:layout_height="244dp"
        app:layout_constraintBottom_toTopOf="@id/labelName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_audiotrack_24"
        android:background="@color/seed"
        android:contentDescription="@string/ImageDescription" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/progressBarDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:max="30"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RecordPath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPauseDetail"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RecordDuration"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/labelDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/labelPath"
        android:text="Duration"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RecordPath"
        android:text="Path"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/labelPath"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints=""
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/NameRecordDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TitleDetail"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/labelName"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/NameRecordDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/labelPath"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/RecordPath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDuration" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/labelDuration"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/RecordDuration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NameRecordDetail" />

    <!--I want the button to stay on the other button -->
    <Button
        android:id="@+id/buttonPlayDetail"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:iconSize="50dp"
        app:icon="@drawable/baseline_play_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtProgress"
        tools:ignore="DuplicateClickableBoundsCheck,SpeakableTextPresentCheck,VisualLintOverlap" />

    <Button
        android:id="@+id/buttonSubstitute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Substitute"
        android:layout_margin="10dp"
        app:icon="@drawable/baseline_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!--I want the button to stay on the other button -->
    <Button
        android:id="@+id/buttonPauseDetail"
        style="?attr/materialIconButtonStyle"
        android:layout_width="wrap_content"
        app:iconSize="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:icon="@drawable/baseline_pause_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtProgress"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@id/buttonPlayDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBarDetail" />

</androidx.constraintlayout.widget.ConstraintLayout>